// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Mock render - areas.content - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "children": <div
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "className": "css-0",
      "id": "areas.content",
    },
    Object {},
  ],
]
`;

exports[`Mock render - default - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "children": <div
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "className": "css-0",
      "id": "default",
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.style - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "children": <div
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "className": "css-1r0rfp",
      "id": "properties.style",
    },
    Object {},
  ],
]
`;
